src/tests/fixtures/type_definitions_from_alias/QueryAsAliasOfUndefined.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Query = undefined;

/** @gqlField */
export function foo(_: Query): string {
  return "foo";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions_from_alias/QueryAsAliasOfUndefined.invalid.ts:2:14 - error: Expected `@gqlType` type to be an object type literal (`{ }`) or `unknown`. For example: `type Foo = { bar: string }` or `type Query = unknown`.

2 type Query = undefined;
               ~~~~~~~~~
